--- a/LearnOpenGL/LearnOpenGL.vcxproj
+++ b/LearnOpenGL/LearnOpenGL.vcxproj
@@ -132,7 +132,9 @@
   <ItemGroup>
     <ClCompile Include="..\..\3d-head-avatar-generation\opengles-windows\src\main.cpp" />
     <ClCompile Include="..\src\glad.c" />
-    <ClCompile Include="..\src\shader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\include\shader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
